secrets/Ingress-with-secrets/pod-password.yaml
apiVersion: v1
kind: Pod
metadata:
  name: password
  labels:
    app: password
spec:
  containers:
    - name: password
      image: nginx
      ports:
        - containerPort: 80
      volumeMounts:
      - name: secret
        mountPath: "/usr/share/nginx/html"
        readOnly: true
  volumes:
    - name: secret
      secret:
        secretName: password
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-secret-svc-password
  labels:
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: password
