secrets/Ingress-with-secrets/pod-url.yaml
apiVersion: v1
kind: Pod
metadata:
  name: url
  labels:
    app: url
spec:
  containers:
    - name: url
      image: nginxdemos/hello:plain-text
      ports:
        - containerPort: 80
      volumeMounts:
      - name: secret
        mountPath: "/usr/share/nginx/html"
        readOnly: true
  volumes:
    - name: secret
      secret:
        secretName: url
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-secret-svc-url
  labels:
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: url
