secrets/Ingress-with-secrets/pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-secret
  labels:
    app: nginx-secret
spec:
  containers:
    - name: nginx-secret
      image: nginxdemos/hello:plain-text
      ports:
        - containerPort: 80
      volumeMounts:
      - name: secret
        mountPath: "/usr/share/nginx/html"
        readOnly: true
  volumes:
    - name: secret
      secret:
        secretName: secret-example
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-secret-svc
  labels:
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: gauda
---

apiVersion: v1
kind: Pod
metadata:
  name: gauda
  labels:
    app: gauda
spec:
  containers:
    - name: gauda
      image: nginxdemos/hello:plain-text
      ports:
        - containerPort: 80
      volumeMounts:
      - name: secret
        mountPath: "/usr/share/nginx/html"
        readOnly: true
  volumes:
    - name: secret
      secret:
        secretName: gauda
---


apiVersion: v1
kind: Service
metadata:
  name: nginx2-secret-svc
  labels:
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginx-secret


---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: secret-example-ingress
spec:
  tls:
  - hosts:
    - ams.cheese.com
    secretName: secret-ssl
  rules:
  - host: ams.cheese.com
    http:
      paths:
      - path: /gauda
        backend:
          serviceName: nginx-secret-svc
          servicePort: 80
      - path: /cheddar
        backend:
          serviceName:  secret-example2
          servicePort: 80
